# autowork

./: .gitignore  AGENTS.md  import_wechat_text.bat  paln.md  plan.md  response.md  start.bat  start_review_workbench.bat  start_wechat_db_poller.bat  start_wechat_poller.bat  start_wechat_review_workbench.bat
agent-workflow/backend/: .env.example  Phase 9 Acceptance Criteria.docx  README.md  pyproject.toml
agent-workflow/backend/app/: __init__.py  config.py  database.py  main.py  mykey.example.py
agent-workflow/backend/app/api/: __init__.py  agent_runs.py  bot.py  chat_feedback.py  context_confidence.py  dashboard.py  demand_radar.py  git_ops.py  llm.py  message_documents.py  messages.py  policy_decisions.py  reports.py  requirement_promotion.py  review_workbench.py  segments.py  task_candidates.py  tests.py  wechat.py  wechat_directory.py  workdocs.py
agent-workflow/backend/app/models/: __init__.py  agent_run.py  bot_command_log.py  chat_message.py  enums.py  feedback_log.py  git_operation.py  task_candidate.py  (+4 more)
agent-workflow/backend/docs/: personal_wechat_spike.md
agent-workflow/backend/scripts/: import_wechat_text.py  poll_wechat_database.py  poll_wechat_messages.py  spike_wxauto_read_group.py  spike_wxauto_send_message.py
agent-workflow/backend/tests/: conftest.py  test_context_confidence.py  test_demand_radar.py  test_health.py  test_llm_demand_radar.py  test_message_documents.py  test_message_paging.py  test_message_store.py  test_phase9_wechat_adapters.py  test_requirement_promotion.py  test_review_workbench.py  test_wechat_directory.py  test_workflow.py
(+82 files in other folders)
